Use correct Java 11 build for OTel Extension
Switch to <release> tag with compiler plugin.
This forces Java 11 compliant code requiring a test change.

Signed-off-by: Karsten Schnitter <k.schnitter@sap.com>